[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcgis-server-rest-explorer"
version = "1.0.0"
description = "Desktop ArcGIS Server REST service explorer built with PySide6."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "GiancaGIS" }
]
dependencies = [
  "PySide6>=6.7",
  "PySide6-Addons>=6.7",
  "httpx>=0.27",
  "keyring>=25",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[project.scripts]
arcgis-server-rest-explorer = "arcgis_server_rest_explorer.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["arcgis_server_rest_explorer*"]

[tool.setuptools.package-data]
arcgis_server_rest_explorer = ["*.js"]
